--- a/src/Components/PageNotFound/PageNotFound.module.css
+++ b/src/Components/PageNotFound/PageNotFound.module.css
@@ -2,14 +2,17 @@
     background: black;
     color: white;
     display: flex;
-    
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .line{
     height: 2px;
-    width: 200px;
+    width: 300px;
+    background-color: white;
+    margin: 20px 0;
 }
 
 .errText{
