--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,20 @@
 .font-jernin{
   font-family: 'Plus Jakarta Sans';
 }
+
+.slider-container {
+  display: flex;
+  overflow: hidden;
+}
+
+.image {
+  width: 200px; /* Adjust the width as needed */
+  height: 200px; /* Adjust the height as needed */
+  margin: 0 10px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.larger-image {
+  width: 250px; /* Adjust the width as needed */
+  height: 250px; /* Adjust the height as needed */
+}
